# ZeroWallpaper

./: .gitignore  README.md  classes2.txt  pyproject.toml  test_chafa_textual.py  test_hack.py  test_image.py  test_probe.py  test_sixel_last_line.py  test_sixel_widget.py
scratch/: test_cleanup.py
tests/experiments/: test_chafa_scale.py  test_patch_textual_image.py  test_patch_textual_image2.py  test_rich_kitty.py  test_segment_length.py  test_textual_kitty.py  test_textual_kitty_forced.py
zerowallpaper/: __init__.py  __main__.py  cli.py
zerowallpaper/core/: __init__.py  cache.py  config.py  favorites.py  github_api.py  history.py  index_builder.py  playlist.py  search.py  tag_parser.py
zerowallpaper/scheduler/: __init__.py  auto_changer.py  daemon.py
zerowallpaper/tui/: __init__.py  app.py  playlist_screen.py  screens.py  sixel_detector.py  sixel_encoder.py  styles.tcss
zerowallpaper/tui/widgets/: __init__.py  chafa_image.py  dashboard_view.py  nav_rail.py  playlist_manager_view.py  preview_panel.py  search_bar.py  sixel_image.py  status_bar.py  tag_sidebar.py  wallpaper_list.py
