[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerowallpaper"
version = "1.2.2"
description = "A premium terminal wallpaper browser and manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shashank" },
]
keywords = ["wallpaper", "tui", "textual", "terminal", "aesthetic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "textual>=0.85.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
    "textual-image",
    "chafa.py",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
zerowallpaper = "zerowallpaper.cli:main"
